increased size of varchar and added bookSuggestions
