# nodejs-microservice/routes.js
@@ -115,7 +115,7 @@ module.exports = function (app) {
             if (isNaN(req.params.book_id)) {
                 res.status(400).json({ message: "id is not valid" });
             } else if (Object.keys(results).length == 0) {
-                res.status(404).json({ message: "Book with id = " + req.params.book_id + " doesn't exists" });;
+                res.status(404).json({ message: "Reviews of the book with id = " + req.params.book_id + " don't exist" });;
             } else if (err) {
                 console.error(err);
                 res.json({
@@ -129,6 +129,29 @@ module.exports = function (app) {
             }
         });
     });
+
+        // get all suggestions by book_ID
+        app.get('/get-suggestions/:book_id', (req, res) => {
+
+            const query = 'SELECT * FROM suggestions where book_id = ' + req.params.book_id;
+            connection.query(query, (err, results, fields) => {
+                if (isNaN(req.params.book_id)) {
+                    res.status(400).json({ message: "id is not valid" });
+                } else if (Object.keys(results).length == 0) {
+                    res.status(404).json({ message: "Suggestions of the book with id = " + req.params.book_id + " don't exist" });;
+                } else if (err) {
+                    console.error(err);
+                    res.json({
+    
+                        message: 'Error occured'
+                    });
+                } else {
+                    res.json({
+                         results
+                    });
+                }
+            });
+        });
     // insert a review 
     app.post('/reviews', (req, res) => {
         const review = req.body;
